src/objects/Enrollment_Conflict__c.object
<CustomObject>
    <description>This custom object is used to track any enrolled Class / Session conflicts</description>
    <fields>
        <fullName>Conflict_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conflict Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Enrollment Conflicts</relationshipLabel>
        <relationshipName>relSessionConflict</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conflicting_Appointment__c</fullName>
        <label>Conflicting Appointment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment__c</fullName>
        <label>Enrollment</label>
        <referenceTo>Enrollment__c</referenceTo>
        <relationshipLabel>Enrollment Conflicts</relationshipLabel>
        <relationshipName>relEnrollmentConflict</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Enrollment Conflict</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Conflicting_Appointment__c</columns>
        <columns>Conflict_Session__c</columns>
        <columns>Enrollment__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EC-{00000000}</displayFormat>
        <label>Enrollment Conflict Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment Conflicts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>